Fix offsetWidth,clientWidth and scrollWidth for empty block elements.  Bug 186516, r+sr=roc